# indicate

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Makefile  README.md  README.rst  pyproject.toml  readthedocs.yml
.github/workflows/: docs.yml  python-publish.yml  test.yml
data/: README.md
data/railway_stations/: README.md  scrape_wikipedia_stations.py
data/wikipedia_interwiki/: README.md
docs/source/: conf.py  index.rst  indicate.rst
examples/: README.md  basic_llm_usage.py  dataframe_transliteration.py  file_processing.py  large_dataset_with_checkpoints.py  pandas_usage.py  punjab_transliteration.ipynb  quick_df_transliteration.py
indicate/: __init__.py  batch.py  cli.py  decoder.py  encoder.py  file_utils.py  hindi2english.py  indic_utils.py  llm_indic.py  logging.py  punjabi2english.py  rerank.py  transliterate.py  transliterator.py  utils.py
indicate/data/: llm_examples.json
indicate/data/hindi_to_english/: english_tokens.json  hindi_tokens.json
indicate/data/punjabi_to_english/: english_tokens.json  punjabi_tokens.json
indicate/data/wikipedia_interwiki/: scrape_wikipedia_interwiki.py
tests/: test_010_hindi_translate.py  test_011_punjabi_translate.py  test_api.py  test_batch.py  test_cli.py  test_edge_cases.py  test_error_handling.py  test_file_io.py  test_file_safety.py  test_llm_indic.py
training/: README.md  baseline_indicxlit.py  build_v2.py  compare.py  compare_ai4bharat.py  compare_hi.py  eval.py  extract_punjabi.py  fetch_aksharantar.py  metrics.py  oos_eval.py  quantize_fp16.py  score_preds.py  train.py
