[build-system]
requires = ["uv_build>=0.9.15,<0.10.0"]
build-backend = "uv_build"

[project]
name = "indicate"
version = "0.6.0"
description = "Transliterations to/from Indian languages"
readme = "README.md"
authors = [
    {name = "Rajashekar Chintalapati", email = "rajshekar.ch@gmail.com"},
    {name = "Gaurav Sood", email = "gsood07@gmail.com"}
]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
keywords = ["transliterate", "indic", "hindi", "english"]
requires-python = ">=3.13"
dependencies = [
    "click>=8.0.0",
    "tqdm>=4.60.0",
    "func-timeout>=4.3.0",
    "numpy>=1.26",
    "torch>=2.6.0",
    "safetensors>=0.4.0",
    "litellm>=1.0.0",  # For LLM-based transliteration
]

[dependency-groups]
docs = [
    "sphinx>=7.0",
    "furo>=2024.1.29",
    "sphinx-autodoc-typehints>=1.25",
    "sphinx-copybutton>=0.5",
    "myst-parser>=2.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.0",
    "ruff>=0.7.0",
    "mypy>=1.0",
    "black>=24.0",
    "isort>=5.0",
    "pre-commit>=3.0",
]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.0",
]
train = [
    "pandas>=2.0",
    "pyarrow>=15",
    "matplotlib>=3.7",
]

[project.urls]
Homepage = "https://github.com/in-rolls/indicate"
Repository = "https://github.com/in-rolls/indicate"

[project.scripts]
indicate = "indicate.cli:cli"
hindi2english = "indicate.transliterate:main"

[tool.uv.build-backend]
module-root = ""
source-exclude = [
    "/.github",
    "/.venv", 
    "/docs",
    "/tests",
    "/notebooks",
    "/data",
    "/.gitignore",
    "/.pre-commit-config.yaml",
]

# Ruff configuration
[tool.ruff]
line-length = 88
target-version = "py313"
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "docs",
    ".eggs",
    "notebooks",
    "data",
    "examples",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # imported but unused
"tests/*" = ["S101"]  # use of assert
"*.ipynb" = ["E402", "E722", "UP031", "B905", "F821", "F811", "W293", "F841"]  # ignore notebook linting issues

[tool.ruff.lint.isort]
known-first-party = ["indicate"]

# Black configuration
[tool.black]
line-length = 88
target-version = ["py313"]

# isort configuration
[tool.isort]
profile = "black"
line_length = 88
known-first-party = ["indicate"]

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = "test_*.py"
addopts = [
    "-ra",
    "--strict-markers",
    "--cov=indicate",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
# mypy configuration
[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = ["torch.*", "safetensors.*", "func_timeout.*"]
ignore_missing_imports = true

# Coverage configuration
[tool.coverage.run]
source = ["indicate"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
